--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <div class="navbar">
      <nav>
-         <a href="#">Home</a> 
-         <a href="#">About</a>  
+         <a href="#">Home|</a> 
+         <a href="#">About |</a>  
          <a href="#">Contact</a> 
      </nav>   
         </div> 
